[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "README.md",
    "LICENSE.txt",
    "pyproject.toml",
    "messthaler_wulff"
]

[project]
name = "messthaler-wulff"
version = "2026.2.12" # version
authors = [
    { name = "Guenthner", email = "guenthner.jonathan@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["matplotlib", "open3d", "psutil", "scipy", "colorama", "pydantic",
    "prettytable", "argcomplete", "mydefaults==2.*", "networkx"]
keywords = ["Wulff", "Wulff Crystals"]

[project.scripts]
messthaler-wulff = "messthaler_wulff:messthaler_wulff"
